--- a/name/name/name.csproj
+++ b/name/name/name.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Level1.cs" />
+    <Compile Include="View\mainView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
