--- a/name/name/name.csproj
+++ b/name/name/name.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Model\SmallFish.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\Level1.cs" />
+    <Compile Include="View\Level.cs" />
     <Compile Include="View\mainView.cs" />
   </ItemGroup>
   <ItemGroup>
